# flippo

./: .clang-format  .gitignore  CMakeLists.txt
player/: CMakeLists.txt  flippo.cpp
player/doc/: ayu_final.cpp  polyy_final.cpp
player/game/: board.cpp  board.h  board_bit.h  player.cpp  player.h  strategy.cpp  strategy.h
player/mcts/: mcts.hpp  node.h
player/strats/: simple.cpp  simple.h  standard_mcts.cpp  standard_mcts.h
player/util/: bit.h  debug.h  rand.cpp  rand.h
tools/: make_single_file.sh  minifier.py
